[metadata]
name = google-keep-pocket-importer
version = 1.0.0
author = zkhcohen
author_email = zacharykhcohen@gmail.com
description = This is a basic script which leverages gkeepapi to import urls/notes from Pocket to Google Keep. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zkhcohen/google-keep-pocket-importer
project_urls =
    Bug Tracker = https://github.com/zkhcohen/google-keep-pocket-importer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    argparse
    bs4
    getpass4
    gkeepapi
    keyring

[options.packages.find]
where=src